# Richards_Equation_RLEnv

./: .gitignore  LICENSE  README.md  __init__.py  utils.py
_configs_models/: re_irrigation.yaml
_train_configs/: richards_soil.yaml
plotters/: compile_rnn_data.py  functions.py  plot_ppo.py  plot_rnn.py  plot_surface.py  ppo_rewards.py  utils.py
richards_model/: README.md  pyproject.toml
richards_model/richards_model/: __init__.py
richards_model/richards_model/envs/: richards_env.py  util.py
richards_model/richards_model/models/: __init__.py  base_model.py  re_irrigation.py  richards_fixed_psi.py  richards_free_drainage.py  richards_zero_flux.py  states_rates.py
train_algs/: PPO_Continuous.py  PPO_Discrete.py  PPO_Reccur.py  base.py
trainers/: train_ppo.py
