[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "richards_model"
version = "1.0.0"
dependencies = ["traitlets_pcse", "numpy", "scipy"]
requires-python = ">=3.12"
authors = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"},
]
maintainers = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"}
]
description = "Model Engine for differentiable models"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["model calibration", "engine"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/wsolow/richards_model"
Documentation = "https://github.com/wsolow/richards_model"
Repository = "https://github.com/wsolow/richards_model"
"Bug Tracker" = "https://github.com/wsolow/richards_model"
Changelog = "https://github.com/wsolow/richards_model"

