[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "richards_model"
version = "1.0.0"
dependencies = ["traitlets_pcse", "numpy", "scipy"]
requires-python = ">=3.12"
authors = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"},
]
maintainers = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"}
]
description = "Environment for Richards Equations"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["RL"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/wsolow/Richards_Equation_RLEnv"


